[project]
name = "scheduler"
version = "0.1.0"
description = ""
authors = [
    {name = "michael-klidzhan",email = "johniehuge@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
responses = "^0.25.7"
black = "^25.1.0"

[tool.black]
line-length = 88
target-version = ['py310']
